compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__generate_json_encoder_for_type_with_multiple_variants_with_no_fields.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 6572
expression: "\npub type Wibble {\n  Wibble\n  Wobble\n  Woo\n}\n"
snapshot_kind: text
---
----- BEFORE ACTION

pub type Wibble {
    ↑            
  Wibble
  Wobble
  Woo
}


----- AFTER ACTION
import gleam/json

pub type Wibble {
  Wibble
  Wobble
  Woo
}

fn wibble_to_json(wibble: Wibble) -> json.Json {
  case wibble {
    Wibble -> json.string("wibble")
    Wobble -> json.string("wobble")
    Woo -> json.string("woo")
  }
}
