compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__generate_json_encoder_for_variant_with_no_fields.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\npub type Wibble {\n  Wibble\n}\n"
---
----- BEFORE ACTION

pub type Wibble {
    ↑            
  Wibble
}


----- AFTER ACTION
import gleam/json

pub type Wibble {
  Wibble
}

fn encode_wibble(wibble: Wibble) -> json.Json {
  json.string("wibble")
}
