compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__generate_json_encoder_recursive_type.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\nimport gleam/option.{Some}\n\npub type LinkedList {\n  LinkedList(value: Int, next: option.Option(LinkedList))\n}\n"
---
----- BEFORE ACTION

import gleam/option.{Some}

pub type LinkedList {
    ↑                
  LinkedList(value: Int, next: option.Option(LinkedList))
}


----- AFTER ACTION

import gleam/json
import gleam/option.{Some}

pub type LinkedList {
  LinkedList(value: Int, next: option.Option(LinkedList))
}

fn encode_linked_list(linked_list: LinkedList) -> json.Json {
  json.object([
    #("value", json.int(linked_list.value)),
    #("next", case linked_list.next {
      option.None -> json.null()
      Some(value) -> encode_linked_list(value)
    }),
  ])
}
