compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__generate_variant_from_pattern_with_no_fields.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\npub type Wibble {\n  Wibble\n}\n\npub fn new() { Wibble }\n\npub fn main() -> Wibble {\n  let assert Wobble = new()\n}\n\n"
---
----- BEFORE ACTION

pub type Wibble {
  Wibble
}

pub fn new() { Wibble }

pub fn main() -> Wibble {
  let assert Wobble = new()
             ↑             
}



----- AFTER ACTION

pub type Wibble {
  Wibble
  Wobble
}

pub fn new() { Wibble }

pub fn main() -> Wibble {
  let assert Wobble = new()
}
