compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__import_internal_module_from_same_package.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\npub fn main() {\n  internal.some_internal_function()\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  internal.some_internal_function()
  ↑                                
}


----- AFTER ACTION
import app/internal

pub fn main() {
  internal.some_internal_function()
}
