compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__import_path_module_from_function.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\npub fn main() {\n  io.println(\"Hello, world!\")\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  io.println("Hello, world!")
  ▔▔↑                        
}


----- AFTER ACTION
import gleam/io

pub fn main() {
  io.println("Hello, world!")
}
