compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__inexhaustive_let_string_prefix_pattern_alias_to_case.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "pub fn main() {\n    let \"123\" as one_two_three <> rest = \"123456\"\n}"
---
----- BEFORE ACTION
pub fn main() {
    let "123" as one_two_three <> rest = "123456"
    ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑         
}


----- AFTER ACTION
pub fn main() {
    let #(one_two_three, rest) = case "123456" {
      "123" as one_two_three <> rest -> #(one_two_three, rest)
      _ -> todo
    }
}
