compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__inline_variable.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\nimport gleam/io\n\npub fn main() {\n  let message = \"Hello!\"\n  io.println(message)\n}\n"
---
----- BEFORE ACTION

import gleam/io

pub fn main() {
  let message = "Hello!"
  io.println(message)
             ↑       
}


----- AFTER ACTION

import gleam/io

pub fn main() {
  io.println("Hello!")
}
